diesel_cli/tests/snapshots/tests__help_snapshots__main_help.snap
---
source: diesel_cli/tests/help_snapshots.rs
expression: res.stdout()
---
Usage: diesel [OPTIONS] <COMMAND>

Commands:
  migration     A group of commands for generating, running, and reverting migrations.
  setup         Creates the migrations directory, creates the database specified in your DATABASE_URL, and runs existing migrations.
  database      A group of commands for setting up and resetting your database.
  completions   Generate shell completion scripts for the diesel command.
  print-schema  Print table definitions for database schema.
  help          Print this message or the help of the given subcommand(s)

Options:
      --database-url <DATABASE_URL>
          Specifies the database URL to connect to. Falls back to the DATABASE_URL environment variable if unspecified.

      --config-file <CONFIG_FILE>
          The location of the configuration file to use. Falls back to the `DIESEL_CONFIG_FILE` environment variable if unspecified. Defaults to `diesel.toml` in your project root. See diesel.rs/guides/configuring-diesel-cli for documentation on this file.

      --locked-schema
          When `print_schema.file` is specified in your config file, this flag will cause Diesel CLI to error if any command would result in changes to that file. It is recommended that you use this flag when running migrations in CI or production.

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

You can also run `diesel SUBCOMMAND -h` to get more information about that subcommand.
